--- a/wilma-application/modules/wilma-engine/build.gradle
+++ b/wilma-application/modules/wilma-engine/build.gradle
@@ -59,7 +59,7 @@ shadowJar {
         'activemq.xsd.*',
         'about.html']
 
-    archiveName = "wilma-$version"+'.jar'
+//    archiveName = "wilma-$version"+'.jar'
 }
 
 jar {
@@ -67,24 +67,29 @@ jar {
     manifest.attributes( 'Main-Class': mainClassName)
     manifest.attributes( 'Implementation-Title': "$componentDescription - V$version")
     manifest.attributes( 'Launcher-Agent-Class': "com.epam.wilma.stubconfig.initializer.support.helper.Agent")
-    archiveName = "$componentName-$version"+'.jar'
+//    archiveName = "$componentName-$version"+'.jar'
 
     finalizedBy shadowJar
 }
 
 dependencies {
-    compile project(':wilma-application:wilma-proxy-integration')
-    compile project(':wilma-application:wilma-webapp')
-    compile project(':wilma-application:wilma-message-maintainer')
-    compile project(':wilma-application:wilma-safeguard')
-    compile project(':wilma-application:wilma-domain')
-    compile project(':wilma-application:wilma-common')
-    compile project(':wilma-application:wilma-core')
-    compile project(':wilma-application:wilma-stub-configuration-parser')
-    compile project(':wilma-application:wilma-property-validation')
-    compile project(':wilma-application:wilma-properties')
-    compile group: 'jetty', name: 'jasper-compiler', version:'4.2.20RC0'
-    compile group: 'javax.servlet.jsp', name: 'jsp-api', version:'2.2'
-    compile group: 'org.eclipse.jetty', name: 'jetty-webapp', version:'8.1.16.v20140903'
-    compile group: 'ognl', name: 'ognl', version:'3.0.8'
+    implementation project(':wilma-application:wilma-common')
+    implementation project(':wilma-application:wilma-core')
+    implementation project(':wilma-application:wilma-domain')
+    implementation project(':wilma-application:wilma-proxy-integration')
+    implementation project(':wilma-application:wilma-webapp')
+    implementation project(':wilma-application:wilma-route-engine')
+    implementation project(':wilma-application:wilma-message-maintainer')
+    implementation project(':wilma-application:wilma-message-sequence')
+    implementation project(':wilma-application:wilma-safeguard')
+    implementation project(':wilma-application:wilma-stub-configuration-parser')
+    implementation project(':wilma-application:wilma-stub-configuration-domain')
+    implementation project(':wilma-application:wilma-property-validation')
+    implementation project(':wilma-application:wilma-properties')
+    implementation 'com.google.guava:guava:18.0'
+    implementation group: 'jetty', name: 'jasper-compiler', version:'4.2.20RC0'
+    implementation group: 'javax.servlet.jsp', name: 'jsp-api', version:'2.2'
+    implementation group: 'org.eclipse.jetty', name: 'jetty-webapp', version:'8.1.16.v20140903'
+    implementation group: 'ognl', name: 'ognl', version:'3.0.8'
+    implementation 'javax.annotation:javax.annotation-api:1.3.2'
 }
