--- a/wilma-application/modules/wilma-message-maintainer/build.gradle
+++ b/wilma-application/modules/wilma-message-maintainer/build.gradle
@@ -19,8 +19,9 @@ along with Wilma.  If not, see <http://www.gnu.org/licenses/>.
 
 description = 'Wilma Message Maintainer'
 dependencies {
-  compile project(':wilma-application:wilma-common')
-  compile project(':wilma-application:wilma-properties')
-  compile project(':wilma-application:wilma-indexing')
-  compile 'javax.annotation:javax.annotation-api:1.3.2'
+  implementation project(':wilma-application:wilma-common')
+  implementation project(':wilma-application:wilma-properties')
+  implementation project(':wilma-application:wilma-indexing')
+  implementation project(':wilma-application:wilma-domain')
+  implementation 'javax.annotation:javax.annotation-api:1.3.2'
 }
