--- a/wilma-application/modules/wilma-webapp/build.gradle
+++ b/wilma-application/modules/wilma-webapp/build.gradle
@@ -19,16 +19,28 @@ along with Wilma.  If not, see <http://www.gnu.org/licenses/>.
 
 description = 'Wilma Webapp'
 dependencies {
-    compile project(':wilma-application:wilma-proxy-integration')
-    compile project(':wilma-application:wilma-common')
-    compile project(':wilma-application:wilma-core')
-    compile project(':wilma-application:wilma-property-validation')
-    compile project(':wilma-application:wilma-stub-configuration-parser')
-    compile project(':wilma-application:wilma-stub-configuration-domain')
-    compile group: 'commons-fileupload', name: 'commons-fileupload', version:'1.3'
-    compile group: 'com.jayway.jsonpath', name: 'json-path', version: '2.4.0'
-    compile "$javaxServletApi"
-    compile 'org.eclipse.jetty:jetty-server:8.1.16.v20140903'
-    compile 'org.json:json:20180813'
-    testCompile 'org.apache.ant:ant:1.9.4'
+    implementation project(':wilma-application:wilma-common')
+    implementation project(':wilma-application:wilma-core')
+    implementation project(':wilma-application:wilma-domain')
+    implementation project(':wilma-application:wilma-stub-configuration-parser')
+    implementation project(':wilma-application:wilma-stub-configuration-domain')
+    implementation project(':wilma-application:wilma-proxy-integration')
+    implementation project(':wilma-application:wilma-route-engine')
+    implementation project(':wilma-application:wilma-compression')
+    implementation project(':wilma-application:wilma-properties')
+    implementation project(':wilma-application:wilma-safeguard')
+    implementation project(':wilma-application:wilma-property-validation')
+    implementation project(':wilma-application:wilma-message-maintainer')
+    implementation project(':wilma-application:wilma-message-sequence')
+    implementation project(':wilma-application:wilma-message-marker')
+    implementation group: 'commons-fileupload', name: 'commons-fileupload', version:'1.3'
+    implementation 'org.eclipse.jetty:jetty-server:8.1.16.v20140903'
+    implementation 'org.json:json:20180813'
+    implementation group: 'com.google.code.gson', name: 'gson', version:'2.2.4'
+    implementation group: 'com.jayway.jsonpath', name: 'json-path', version: '2.4.0'
+    implementation 'com.google.guava:guava:18.0'
+    implementation group: 'org.apache.bcel', name: 'bcel', version:'5.2'
+    implementation 'javax.annotation:javax.annotation-api:1.3.2'
+    implementation "$javaxServletApi"
+    testImplementation 'org.apache.ant:ant:1.9.4'
 }
