--- a/wilma-extras/random.error.generator/build.gradle
+++ b/wilma-extras/random.error.generator/build.gradle
@@ -1,5 +1,7 @@
 dependencies {
-    compile project(':wilma-application:wilma-domain')
-    compile project(':wilma-application:wilma-webapp')
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    implementation project(':wilma-application:wilma-domain')
+    implementation project(':wilma-application:wilma-webapp')
+    implementation project(':wilma-application:wilma-stub-configuration-domain')
+    implementation group: 'org.slf4j', name: 'slf4j-api', version: "${orgSfl4jVersion}"
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
 }
