--- a/wilma-extras/replicator/build.gradle
+++ b/wilma-extras/replicator/build.gradle
@@ -1,7 +1,17 @@
 dependencies {
-    compile project(':wilma-application:wilma-domain')
-    compile project(':wilma-application:wilma-webapp')
+    implementation project(':wilma-application:wilma-core')
+    implementation project(':wilma-application:wilma-domain')
+    implementation project(':wilma-application:wilma-stub-configuration-domain')
+    implementation project(':wilma-application:wilma-webapp')
+    implementation 'commons-io:commons-io:2.4'
+    implementation 'com.google.guava:guava:18.0'
+    implementation group: 'org.slf4j', name: 'slf4j-api', version: "${orgSfl4jVersion}"
     //this httpclient need to be in synch with httpclient used by the proxy lib of wilma
-    compile group: 'org.apache.httpcomponents', name: 'httpclient', version:'4.2.3'
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    implementation group: 'org.apache.httpcomponents', name: 'httpclient', version:'4.5.13'
+    implementation group: 'javax.jms', name: 'jms', version:'1.1'
+    implementation group: 'org.springframework', name: 'spring-jms', version:'4.1.6.RELEASE'
+    implementation(group: 'org.apache.activemq', name: 'activemq-client', version:'5.11.1') {
+        exclude(module: 'geronimo-jms_1.1_spec')
+    }
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
 }
