--- a/wilma-functionaltest/build.gradle
+++ b/wilma-functionaltest/build.gradle
@@ -20,29 +20,34 @@ apply plugin: 'application'
 
 repositories {
     maven { url 'https://jitpack.io' }
+    maven { url 'http://maven.bestsolution.at/efxclipse-releases/' }
 }
 
 dependencies {
-    compile project(':wilma-application:wilma-stub-configuration-domain')
-    compile "junit:junit:4.12"
-    compile 'gsbase:gsbase:2.0'
-    compile 'jakarta-regexp:jakarta-regexp:1.4'
-    compile 'org.slf4j:slf4j-api:1.7.7'
-    compile 'org.slf4j:slf4j-log4j12:1.7.7'
-    compile 'com.sun.mail:javax.mail:1.5.2'
-    compile 'org.apache.commons:commons-lang3:3.1'
-    compile 'net.sf.opencsv:opencsv:2.3'
-    compile 'org.springframework:spring-core:4.1.3.RELEASE'
-    compile group: 'org.mockito', name: 'mockito-all', version:'1.9.5'
-    compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.13'
-    compile 'commons-io:commons-io:2.4'
-    compile 'org.codehaus.jackson:jackson-mapper-asl:1.9.13'
-    compile 'com.sun.xml.fastinfoset:FastInfoset:1.2.13'
-    compile project(':wilma-service-api')
-//    compile "com.epam.wilma:wilma-service-api:$version"
-    compile 'com.github.everit-org.json-schema:org.everit.json.schema:1.9.1'
+    implementation project(':wilma-application:wilma-domain')
+    implementation project(':wilma-application:wilma-stub-configuration-domain')
+    implementation "junit:junit:4.12"
+    implementation 'gsbase:gsbase:2.0'
+    implementation 'jakarta-regexp:jakarta-regexp:1.4'
+    implementation 'org.slf4j:slf4j-api:1.7.7'
+    implementation 'org.slf4j:slf4j-log4j12:1.7.7'
+    implementation 'com.sun.mail:javax.mail:1.5.2'
+    implementation 'org.apache.commons:commons-lang3:3.1'
+    implementation 'net.sf.opencsv:opencsv:2.3'
+    implementation 'org.springframework:spring-core:4.1.6.RELEASE'
+    implementation group: 'org.springframework', name: 'spring-jms', version:'4.1.6.RELEASE'
+    implementation group: 'org.mockito', name: 'mockito-all', version:'1.9.5'
+    implementation group: 'at.bestsolution.efxclipse.eclipse', name: 'org.apache.commons.httpclient', version: '3.1.0'
+    implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.13'
+    implementation 'commons-io:commons-io:2.4'
+    implementation 'org.codehaus.jackson:jackson-mapper-asl:1.9.13'
+    implementation 'com.sun.xml.fastinfoset:FastInfoset:1.2.13'
+    implementation project(':wilma-service-api')
+//    implementation "com.epam.wilma:wilma-service-api:$version"
+    implementation 'com.github.everit-org.json-schema:org.everit.json.schema:1.9.1'
     implementation 'org.xmlunit:xmlunit-core:2.8.2'
     implementation 'org.xmlunit:xmlunit-matchers:2.8.2'
+    implementation "$javaxServletApi"
 }
 
 sourceSets {
