--- a/wilma-message-search/modules/wilma-message-search-lucene/build.gradle
+++ b/wilma-message-search/modules/wilma-message-search-lucene/build.gradle
@@ -20,14 +20,14 @@
 description= 'Wilma Message Search Properties'
 
 dependencies {
-    compile group: 'org.apache.lucene', name: 'lucene-core', version:'4.10.2'
-    compile group: 'org.apache.lucene', name: 'lucene-queries', version:'4.10.2'
-    compile group: 'org.apache.lucene', name: 'lucene-analyzers-common', version:'4.10.2'
-    compile group: 'org.apache.lucene', name: 'lucene-queryparser', version:'4.10.2'
-    compile group: 'org.springframework', name: 'spring-jms', version:'4.1.6.RELEASE'
-    compile group: 'javax.jms', name: 'jms', version:'1.1'
-    compile group: 'org.apache.activemq', name: 'activemq-spring', version:'5.11.1'
-    compile project(':wilma-message-search:wilma-message-search-domain')
-    compile project(':wilma-message-search:wilma-message-search-properties')
-    compile 'javax.annotation:javax.annotation-api:1.3.2'
+    implementation group: 'org.apache.lucene', name: 'lucene-core', version:'4.10.2'
+    implementation group: 'org.apache.lucene', name: 'lucene-queries', version:'4.10.2'
+    implementation group: 'org.apache.lucene', name: 'lucene-analyzers-common', version:'4.10.2'
+    implementation group: 'org.apache.lucene', name: 'lucene-queryparser', version:'4.10.2'
+    implementation group: 'org.springframework', name: 'spring-jms', version:'4.1.6.RELEASE'
+    implementation group: 'javax.jms', name: 'jms', version:'1.1'
+    implementation group: 'org.apache.activemq', name: 'activemq-spring', version:'5.11.1'
+    implementation project(':wilma-message-search:wilma-message-search-domain')
+    implementation project(':wilma-message-search:wilma-message-search-properties')
+    implementation 'javax.annotation:javax.annotation-api:1.3.2'
 }
