--- a/wilma-message-search/modules/wilma-message-search-properties/build.gradle
+++ b/wilma-message-search/modules/wilma-message-search-properties/build.gradle
@@ -18,5 +18,5 @@
 ===========================================================================*/
 description = 'Wilma Message Search Properties'
 dependencies {
-    compile project(':wilma-message-search:wilma-message-search-domain')
+    implementation project(':wilma-message-search:wilma-message-search-domain')
 }
