--- a/wilma-test/wilma-test-client/build.gradle
+++ b/wilma-test/wilma-test-client/build.gradle
@@ -53,9 +53,9 @@ jar {
 }
 
 dependencies {
-    compile group: 'org.slf4j', name: 'slf4j-api', version:'1.7.5'
-    compile group: 'ch.qos.logback', name: 'logback-classic', version:'1.0.12'
-    compile group: 'commons-httpclient', name: 'commons-httpclient', version:'3.1'
-    compile group: 'commons-io', name: 'commons-io', version:'2.4'
-    compile group: 'com.sun.xml.fastinfoset', name: 'FastInfoset', version:'2.0.0'
+    implementation group: 'org.slf4j', name: 'slf4j-api', version:'1.7.5'
+    implementation group: 'ch.qos.logback', name: 'logback-classic', version:'1.0.12'
+    implementation group: 'commons-httpclient', name: 'commons-httpclient', version:'3.1'
+    implementation group: 'commons-io', name: 'commons-io', version:'2.4'
+    implementation group: 'com.sun.xml.fastinfoset', name: 'FastInfoset', version:'2.0.0'
 }
