--- a/wilma-application/modules/wilma-engine/build.gradle
+++ b/wilma-application/modules/wilma-engine/build.gradle
@@ -58,17 +58,13 @@ shadowJar {
         'XPP3_1.1.4c_MIN_VERSION',
         'activemq.xsd.*',
         'about.html']
-
-//    archiveName = "wilma-$version"+'.jar'
 }
 
 jar {
     manifest.attributes( 'provider': 'gradle')
     manifest.attributes( 'Main-Class': mainClassName)
-    manifest.attributes( 'Implementation-Title': "$componentDescription - V$version")
+    manifest.attributes( 'Implementation-Title': "$componentDescription - V$archiveVersion")
     manifest.attributes( 'Launcher-Agent-Class': "com.epam.wilma.stubconfig.initializer.support.helper.Agent")
-//    archiveName = "$componentName-$version"+'.jar'
-
     finalizedBy shadowJar
 }
 
