--- a/wilma-application/modules/wilma-engine/build.gradle
+++ b/wilma-application/modules/wilma-engine/build.gradle
@@ -63,7 +63,7 @@ shadowJar {
 jar {
     manifest.attributes( 'provider': 'gradle')
     manifest.attributes( 'Main-Class': mainClassName)
-    manifest.attributes( 'Implementation-Title': "$componentDescription - V$archiveVersion")
+    manifest.attributes( 'Implementation-Title': "$componentDescription - V" + archiveVersion.get())
     manifest.attributes( 'Launcher-Agent-Class': "com.epam.wilma.stubconfig.initializer.support.helper.Agent")
     finalizedBy shadowJar
 }
