--- a/wilma-message-search/modules/wilma-message-search-engine/build.gradle
+++ b/wilma-message-search/modules/wilma-message-search-engine/build.gradle
@@ -57,7 +57,7 @@ dependencies {
 jar {
     manifest.attributes( 'provider': 'gradle')
     manifest.attributes( 'Main-Class': 'com.epam.wilma.message.search.engine.MessageSearchApplication')
-    manifest.attributes( 'Implementation-Title': "$componentDescription - V$archiveVersion")
+    manifest.attributes( 'Implementation-Title': "$componentDescription - V" + archiveVersion.get())
 }
 
 shadowJar {
