--- a/wilma-test/wilma-test-server/build.gradle
+++ b/wilma-test/wilma-test-server/build.gradle
@@ -19,15 +19,15 @@ along with Wilma.  If not, see <http://www.gnu.org/licenses/>.
 
 ext.componentDescription = "Wilma Test Server"
 
-apply plugin: 'com.github.johnrengelman.shadow'
 apply plugin: 'application'
+apply plugin: 'com.github.johnrengelman.shadow'
 
 buildscript {
     repositories {
-        maven { url "https://plugins.gradle.org/m2/" }
+        gradlePluginPortal()
     }
     dependencies {
-        classpath 'com.github.jengelman.gradle.plugins:shadow:5.2.0'
+        classpath 'gradle.plugin.com.github.jengelman.gradle.plugins:shadow:7.0.0'
     }
 }
 
@@ -44,7 +44,7 @@ shadowJar {
 jar {
     manifest.attributes( 'provider': 'gradle')
     manifest.attributes( 'Main-Class': mainClassName)
-    manifest.attributes( 'Implementation-Title': "$componentDescription - V$archiveVersion")
+    manifest.attributes( 'Implementation-Title': "$componentDescription - V" + archiveVersion.get())
 
     finalizedBy shadowJar
 }
