--- a/wilma-extras/bulkhead/build.gradle
+++ b/wilma-extras/bulkhead/build.gradle
@@ -4,5 +4,5 @@ dependencies {
     implementation project(':wilma-application:wilma-stub-configuration-domain')
     implementation 'com.google.guava:guava:18.0'
     implementation "$javaxServletApi"
-    testImplementation group: 'junit', name: 'junit', version: '4.12'
+    testImplementation group: 'junit', name: 'junit', version: "${jUnitVersion}"
 }
