--- a/wilma-extras/circuitBreaker/build.gradle
+++ b/wilma-extras/circuitBreaker/build.gradle
@@ -5,5 +5,5 @@ dependencies {
     implementation 'com.google.guava:guava:18.0'
     implementation group: 'org.slf4j', name: 'slf4j-api', version: "${orgSfl4jVersion}"
     implementation "$javaxServletApi"
-    testImplementation group: 'junit', name: 'junit', version: '4.12'
+    testImplementation group: 'junit', name: 'junit', version: "${jUnitVersion}"
 }
