--- a/wilma-extras/randomErrorGenerator/build.gradle
+++ b/wilma-extras/randomErrorGenerator/build.gradle
@@ -3,5 +3,5 @@ dependencies {
     implementation project(':wilma-application:wilma-webapp')
     implementation project(':wilma-application:wilma-stub-configuration-domain')
     implementation group: 'org.slf4j', name: 'slf4j-api', version: "${orgSfl4jVersion}"
-    testImplementation group: 'junit', name: 'junit', version: '4.12'
+    testImplementation group: 'junit', name: 'junit', version: "${jUnitVersion}"
 }
