--- a/wilma-extras/shortCircuit/build.gradle
+++ b/wilma-extras/shortCircuit/build.gradle
@@ -9,5 +9,5 @@ dependencies {
     implementation 'org.json:json:20180813'
     implementation group: 'org.springframework', name: 'spring-jms', version:'4.1.6.RELEASE'
     implementation "$javaxServletApi"
-    testImplementation group: 'junit', name: 'junit', version: '4.12'
+    testImplementation group: 'junit', name: 'junit', version: "${jUnitVersion}"
 }
